<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".features.sales.presentation.SalesFragment">

    <!-- Selección del cliente -->
    <AutoCompleteTextView
        android:id="@+id/input_client_dni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/dni_del_cliente"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Concepto -->
    <EditText
        android:id="@+id/input_concept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/concepto"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/input_client_dni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Total -->
    <EditText
        android:id="@+id/input_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/input_concept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/btn_save_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toBottomOf="@id/input_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Botón Volver -->
    <Button
        android:id="@+id/btn_back_sale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintTop_toBottomOf="@id/btn_save_sale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
